import React, { Fragment } from 'react'
import { Text } from 'react-native'

const Home = () => {
  return (
    <Fragment>
      <Text>Hello</Text>
      <Text testID="home_title">This is Home Page</Text>
    </Fragment>
  )
}
export default Home
